# cce

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/: cce-document-types.plist  cce-info.plist  cce.applescript
config/: default-config.toml
crates/cce-cli/: Cargo.toml
crates/cce-cli/src/: dashboard.rs  main.rs
scripts/: build-release-bundle.sh  install-cce-app.sh  install-zed-shim-app.sh  set-cce-associations.sh
src/: launch.rs  lib.rs  model.rs  routing.rs
