[workspace]
members = [".", "crates/cce-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/herculesggimenes/cce"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
glob = "0.3"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

[package]
name = "cce-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "cce_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
