[package]
name = "cce"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cce"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cce-core = { path = "../.." }
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
